--- a/password-security-analyzer.html
+++ b/password-security-analyzer.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
-     crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
 
     <meta name="google-adsense-account" content="ca-pub-3663278458751008">
 
@@ -12,17 +13,19 @@
     <title>Advanced Password Security Analyzer</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
 
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-<meta property="og:site_name" content="CyberWise Tech" />
-<meta property="og:url" content="https://www.bhaskarsah.com.np" />
-<meta property="og:type" content="website" />
-<meta property="og:title" content="CyberWise" />
-<meta property="og:description" content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
-<meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
+    <meta property="og:site_name" content="CyberWise Tech" />
+    <meta property="og:url" content="https://www.bhaskarsah.com.np" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="CyberWise" />
+    <meta property="og:description"
+        content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
+    <meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
 
-<script type="application/ld+json">
+    <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
@@ -79,7 +82,7 @@
             max-width: 1200px;
             padding: 20px 40px;
             display: flex;
-            justify-content: space-between; 
+            justify-content: space-between;
             align-items: center;
             z-index: 1000;
         }
@@ -100,11 +103,14 @@
             gap: 8px;
         }
 
-        [data-theme="dark"] .logo-text { color: #50fa7b; }
+        [data-theme="dark"] .logo-text {
+            color: #50fa7b;
+        }
 
-        .logo-text img { 
-            height: 40px; 
-            width: 35px; }
+        .logo-text img {
+            height: 40px;
+            width: 35px;
+        }
 
         .logo-subtext {
             font-size: 0.75rem;
@@ -123,11 +129,15 @@
             display: flex;
             align-items: center;
             gap: 8px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
         }
 
         /* --- Main Content --- */
-        .main-container { width: 100%; max-width: 800px; padding: 0 20px; }
+        .main-container {
+            width: 100%;
+            max-width: 800px;
+            padding: 0 20px;
+        }
 
         .page-title {
             text-align: center;
@@ -142,10 +152,14 @@
             border: 1px solid var(--border);
             border-radius: 24px;
             padding: 30px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.05);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
         }
 
-        .input-box { position: relative; margin-bottom: 25px; }
+        .input-box {
+            position: relative;
+            margin-bottom: 25px;
+        }
+
         input {
             width: 100%;
             background: var(--bg);
@@ -156,40 +170,117 @@
             font-size: 1.1rem;
             outline: none;
         }
-        input:focus { border-color: var(--accent); }
-        .input-box i { position: absolute; left: 20px; top: 50%; transform: translateY(-50%); color: var(--text-body); }
 
-        .meter { height: 10px; background: var(--bar-track); border-radius: 20px; margin-bottom: 30px; overflow: hidden; }
-        .meter-bar { height: 100%; width: 0%; border-radius: 20px; }
+        input:focus {
+            border-color: var(--accent);
+        }
 
-        .grid { display: grid; grid-template-columns: 1.2fr 0.8fr; gap: 20px; }
+        .input-box i {
+            position: absolute;
+            left: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: var(--text-body);
+        }
+
+        .meter {
+            height: 10px;
+            background: var(--bar-track);
+            border-radius: 20px;
+            margin-bottom: 30px;
+            overflow: hidden;
+        }
+
+        .meter-bar {
+            height: 100%;
+            width: 0%;
+            border-radius: 20px;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: 1.2fr 0.8fr;
+            gap: 20px;
+        }
 
         .info-cell {
-            background: rgba(0,0,0,0.02);
+            background: rgba(0, 0, 0, 0.02);
             border: 1px solid var(--border);
             border-radius: 20px;
             padding: 20px;
         }
-        [data-theme="dark"] .info-cell { background: rgba(255,255,255,0.03); }
 
-        .label-tag { font-size: 0.7rem; font-weight: 700; text-transform: uppercase; color: var(--text-body); margin-bottom: 12px; display: block; }
-        
-        #time-display { font-size: 1.8rem; font-weight: 700; }
-        #bits-pill { font-weight: 600; color: var(--accent); font-size: 0.9rem; margin-top: 15px; border-top: 1px solid var(--border); padding-top: 15px; }
+        [data-theme="dark"] .info-cell {
+            background: rgba(255, 255, 255, 0.03);
+        }
 
-        .checklist li { list-style: none; padding: 8px 0; font-size: 0.85rem; color: var(--text-body); display: flex; justify-content: space-between; align-items: center; }
-        .checklist .met { color: var(--success); font-weight: 600; }
+        .label-tag {
+            font-size: 0.7rem;
+            font-weight: 700;
+            text-transform: uppercase;
+            color: var(--text-body);
+            margin-bottom: 12px;
+            display: block;
+        }
+
+        #time-display {
+            font-size: 1.8rem;
+            font-weight: 700;
+        }
+
+        #bits-pill {
+            font-weight: 600;
+            color: var(--accent);
+            font-size: 0.9rem;
+            margin-top: 15px;
+            border-top: 1px solid var(--border);
+            padding-top: 15px;
+        }
+
+        .checklist li {
+            list-style: none;
+            padding: 8px 0;
+            font-size: 0.85rem;
+            color: var(--text-body);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .checklist .met {
+            color: var(--success);
+            font-weight: 600;
+        }
 
         @media (max-width: 600px) {
-            header { padding: 15px 20px; }
-            .logo-text { font-size: 1.2rem; }
-            .grid { grid-template-columns: 1fr; }
-            .page-title { font-size: 1.4rem; margin-top: 20px; }
-            .card { padding: 20px; }
-            #time-display { font-size: 1.5rem; }
+            header {
+                padding: 15px 20px;
+            }
+
+            .logo-text {
+                font-size: 1.2rem;
+            }
+
+            .grid {
+                grid-template-columns: 1fr;
+            }
+
+            .page-title {
+                font-size: 1.4rem;
+                margin-top: 20px;
+            }
+
+            .card {
+                padding: 20px;
+            }
+
+            #time-display {
+                font-size: 1.5rem;
+            }
         }
     </style>
 </head>
+
 <body data-theme="dark">
 
     <header>
@@ -200,7 +291,7 @@
             </a>
             <div class="logo-subtext">Tech & Security Insights</div>
         </div>
-        
+
         <button class="toggle-btn" id="theme-btn">
             <i class="fas fa-moon"></i> <span>Dark Mode</span>
         </button>
@@ -240,89 +331,90 @@
         </div>
     </div>
 
-<script>
-    const input = document.getElementById('pass-input');
-    const timeDisplay = document.getElementById('time-display');
-    const bitsDisplay = document.getElementById('bits-pill');
-    const bar = document.getElementById('meter-bar');
-    const themeBtn = document.getElementById('theme-btn');
+    <script>
+        const input = document.getElementById('pass-input');
+        const timeDisplay = document.getElementById('time-display');
+        const bitsDisplay = document.getElementById('bits-pill');
+        const bar = document.getElementById('meter-bar');
+        const themeBtn = document.getElementById('theme-btn');
 
-    themeBtn.addEventListener('click', () => {
-        const isDark = document.body.getAttribute('data-theme') === 'dark';
-        document.body.setAttribute('data-theme', isDark ? 'light' : 'dark');
-        themeBtn.querySelector('i').className = isDark ? 'fas fa-sun' : 'fas fa-moon';
-        themeBtn.querySelector('span').innerText = isDark ? 'Light Mode' : 'Dark Mode';
-    });
+        themeBtn.addEventListener('click', () => {
+            const isDark = document.body.getAttribute('data-theme') === 'dark';
+            document.body.setAttribute('data-theme', isDark ? 'light' : 'dark');
+            themeBtn.querySelector('i').className = isDark ? 'fas fa-sun' : 'fas fa-moon';
+            themeBtn.querySelector('span').innerText = isDark ? 'Light Mode' : 'Dark Mode';
+        });
 
-    input.addEventListener('input', (e) => {
-        const pwd = e.target.value;
-        const stats = analyze(pwd);
-        updateUI(pwd, stats);
-    });
+        input.addEventListener('input', (e) => {
+            const pwd = e.target.value;
+            const stats = analyze(pwd);
+            updateUI(pwd, stats);
+        });
 
-    function analyze(pwd) {
-        let pool = 0;
-        const low = /[a-z]/.test(pwd), up = /[A-Z]/.test(pwd), num = /[0-9]/.test(pwd), sym = /[^a-zA-Z0-9]/.test(pwd);
-        if (low) pool += 26;
-        if (up) pool += 26;
-        if (num) pool += 10;
-        if (sym) pool += 32;
-        return { pool, low, up, num, sym, len: pwd.length };
-    }
-
-    function updateUI(pwd, stats) {
-        if (!pwd) { resetUI(); return; }
-
-        toggleList('l-1', stats.len >= 12);
-        toggleList('l-2', stats.low);
-        toggleList('l-3', stats.up);
-        toggleList('l-4', stats.num);
-        toggleList('l-5', stats.sym);
-
-        const bits = Math.floor(stats.len * Math.log2(stats.pool || 1));
-        const seconds = Math.pow(stats.pool || 1, stats.len) / 1e12;
-
-        let timeMsg = "", color = "", width = "0%", grade = "Insecure";
-
-        if (seconds < 1) { timeMsg = "Instantly"; color = "var(--danger)"; width = "10%"; }
-        else if (seconds < 60) { timeMsg = Math.floor(seconds) + " Seconds"; color = "var(--danger)"; width = "20%"; }
-        else if (seconds < 3600) { timeMsg = Math.floor(seconds / 60) + " Minutes"; color = "var(--danger)"; width = "30%"; }
-        else if (seconds < 86400) { timeMsg = Math.floor(seconds / 3600) + " Hours"; color = "var(--warning)"; width = "45%"; grade = "Poor"; }
-        else if (seconds < 604800) { timeMsg = Math.floor(seconds / 86400) + " Days"; color = "var(--warning)"; width = "55%"; grade = "Fair"; }
-        else if (seconds < 2592000) { timeMsg = Math.floor(seconds / 604800) + " Weeks"; color = "var(--warning)"; width = "65%"; grade = "Moderate"; }
-        else if (seconds < 31536000) { timeMsg = Math.floor(seconds / 2592000) + " Months"; color = "var(--success)"; width = "80%"; grade = "Decent"; }
-        else {
-            const years = seconds / 31536000;
-            color = "var(--success)"; width = "100%"; grade = "Strong";
-            if (years < 1000) timeMsg = Math.floor(years) + " Years";
-            else if (years < 1e6) timeMsg = Math.floor(years/1e3) + "k Years";
-            else if (years < 1e9) timeMsg = Math.floor(years/1e6) + "M Years";
-            else timeMsg = Math.floor(years/1e9) + "B Years";
+        function analyze(pwd) {
+            let pool = 0;
+            const low = /[a-z]/.test(pwd), up = /[A-Z]/.test(pwd), num = /[0-9]/.test(pwd), sym = /[^a-zA-Z0-9]/.test(pwd);
+            if (low) pool += 26;
+            if (up) pool += 26;
+            if (num) pool += 10;
+            if (sym) pool += 32;
+            return { pool, low, up, num, sym, len: pwd.length };
         }
 
-        timeDisplay.innerText = timeMsg;
-        timeDisplay.style.color = color;
-        bitsDisplay.innerText = `${bits} bits (${grade})`;
-        bitsDisplay.style.color = color;
-        bar.style.width = width;
-        bar.style.backgroundColor = color;
-    }
+        function updateUI(pwd, stats) {
+            if (!pwd) { resetUI(); return; }
 
-    function toggleList(id, met) {
-        const el = document.getElementById(id);
-        const icon = el.querySelector('i');
-        if (met) { el.className = 'met'; icon.className = 'fas fa-check-circle'; } 
-        else { el.className = ''; icon.className = 'far fa-circle'; }
-    }
+            toggleList('l-1', stats.len >= 12);
+            toggleList('l-2', stats.low);
+            toggleList('l-3', stats.up);
+            toggleList('l-4', stats.num);
+            toggleList('l-5', stats.sym);
 
-    function resetUI() {
-        timeDisplay.innerText = "---";
-        timeDisplay.style.color = "var(--text-heading)";
-        bitsDisplay.innerText = "0 bits (Ready)";
-        bitsDisplay.style.color = "var(--accent)";
-        bar.style.width = "0%";
-        document.querySelectorAll('.checklist li').forEach(li => { li.className = ''; li.querySelector('i').className = 'far fa-circle'; });
-    }
-</script>
+            const bits = Math.floor(stats.len * Math.log2(stats.pool || 1));
+            const seconds = Math.pow(stats.pool || 1, stats.len) / 1e12;
+
+            let timeMsg = "", color = "", width = "0%", grade = "Insecure";
+
+            if (seconds < 1) { timeMsg = "Instantly"; color = "var(--danger)"; width = "10%"; }
+            else if (seconds < 60) { timeMsg = Math.floor(seconds) + " Seconds"; color = "var(--danger)"; width = "20%"; }
+            else if (seconds < 3600) { timeMsg = Math.floor(seconds / 60) + " Minutes"; color = "var(--danger)"; width = "30%"; }
+            else if (seconds < 86400) { timeMsg = Math.floor(seconds / 3600) + " Hours"; color = "var(--warning)"; width = "45%"; grade = "Poor"; }
+            else if (seconds < 604800) { timeMsg = Math.floor(seconds / 86400) + " Days"; color = "var(--warning)"; width = "55%"; grade = "Fair"; }
+            else if (seconds < 2592000) { timeMsg = Math.floor(seconds / 604800) + " Weeks"; color = "var(--warning)"; width = "65%"; grade = "Moderate"; }
+            else if (seconds < 31536000) { timeMsg = Math.floor(seconds / 2592000) + " Months"; color = "var(--success)"; width = "80%"; grade = "Decent"; }
+            else {
+                const years = seconds / 31536000;
+                color = "var(--success)"; width = "100%"; grade = "Strong";
+                if (years < 1000) timeMsg = Math.floor(years) + " Years";
+                else if (years < 1e6) timeMsg = Math.floor(years / 1e3) + "k Years";
+                else if (years < 1e9) timeMsg = Math.floor(years / 1e6) + "M Years";
+                else timeMsg = Math.floor(years / 1e9) + "B Years";
+            }
+
+            timeDisplay.innerText = timeMsg;
+            timeDisplay.style.color = color;
+            bitsDisplay.innerText = `${bits} bits (${grade})`;
+            bitsDisplay.style.color = color;
+            bar.style.width = width;
+            bar.style.backgroundColor = color;
+        }
+
+        function toggleList(id, met) {
+            const el = document.getElementById(id);
+            const icon = el.querySelector('i');
+            if (met) { el.className = 'met'; icon.className = 'fas fa-check-circle'; }
+            else { el.className = ''; icon.className = 'far fa-circle'; }
+        }
+
+        function resetUI() {
+            timeDisplay.innerText = "---";
+            timeDisplay.style.color = "var(--text-heading)";
+            bitsDisplay.innerText = "0 bits (Ready)";
+            bitsDisplay.style.color = "var(--accent)";
+            bar.style.width = "0%";
+            document.querySelectorAll('.checklist li').forEach(li => { li.className = ''; li.querySelector('i').className = 'far fa-circle'; });
+        }
+    </script>
 </body>
+
 </html>
