--- a/secure.html
+++ b/secure.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
-     crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
 
     <meta name="google-adsense-account" content="ca-pub-3663278458751008">
 
@@ -12,14 +13,15 @@
     <title>CyberWise | Secure Link Detector</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
 
-<meta property="og:site_name" content="CyberWise Tech" />
-<meta property="og:url" content="https://www.bhaskarsah.com.np" />
-<meta property="og:type" content="website" />
-<meta property="og:title" content="CyberWise" />
-<meta property="og:description" content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
-<meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
+    <meta property="og:site_name" content="CyberWise Tech" />
+    <meta property="og:url" content="https://www.bhaskarsah.com.np" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="CyberWise" />
+    <meta property="og:description"
+        content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
+    <meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
 
-<script type="application/ld+json">
+    <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
@@ -35,7 +37,7 @@
             --card-bg: #161b22;
             --input-bg: #0d1117;
             --text: #c9d1d9;
-            --accent: #50fa7b; 
+            --accent: #50fa7b;
             --glow: rgba(80, 250, 123, 0.2);
             --danger: #f85149;
             --secure: #50fa7b;
@@ -47,11 +49,14 @@
             --card-bg: #ffffff;
             --input-bg: #ffffff;
             --text: #24292f;
-            --accent: #3498db; 
+            --accent: #3498db;
             --glow: rgba(52, 152, 219, 0.15);
         }
 
-        * { box-sizing: border-box; transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1); }
+        * {
+            box-sizing: border-box;
+            transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
 
         body {
             margin: 0;
@@ -60,17 +65,17 @@
             color: var(--text);
             display: flex;
             flex-direction: column;
-            align-items: center; 
+            align-items: center;
             min-height: 100vh;
         }
 
 
         header {
             width: 100%;
-            max-width: 1250px; 
+            max-width: 1250px;
             padding: 20px 40px;
             display: flex;
-            justify-content: space-between; 
+            justify-content: space-between;
             align-items: center;
         }
 
@@ -83,7 +88,7 @@
         .logo-text {
             font-size: 2em;
             font-weight: 670;
-            color: var(--accent); 
+            color: var(--accent);
             text-decoration: none;
             display: flex;
             align-items: center;
@@ -105,11 +110,14 @@
             background: var(--card-bg);
             border: 2px solid var(--accent);
             border-radius: 50%;
-            width: 42px; height: 42px;
+            width: 42px;
+            height: 42px;
             cursor: pointer;
             color: var(--text);
-            display: flex; align-items: center; justify-content: center;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
 
         /* --- Main UI --- */
@@ -130,7 +138,9 @@
             opacity: 0.8;
         }
 
-        .search-area { margin-bottom: 30px; }
+        .search-area {
+            margin-bottom: 30px;
+        }
 
         input {
             width: 100%;
@@ -148,10 +158,10 @@
         .result-panel {
             background: var(--card-bg);
             border-radius: 16px;
-            border: 1px solid rgba(128,128,128,0.1);
+            border: 1px solid rgba(128, 128, 128, 0.1);
             padding: 24px;
             text-align: left;
-            box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
             display: none;
         }
 
@@ -177,11 +187,17 @@
         }
 
         @media (max-width: 480px) {
-            header { padding: 20px; }
-            .logo-text { font-size: 1.5em; }
+            header {
+                padding: 20px;
+            }
+
+            .logo-text {
+                font-size: 1.5em;
+            }
         }
     </style>
 </head>
+
 <body>
 
     <header>
@@ -257,4 +273,5 @@
         }
     </script>
 </body>
+
 </html>
