--- a/Marketplaces-Cryptocurrency.html
+++ b/Marketplaces-Cryptocurrency.html
@@ -973,6 +973,7 @@
                             <a href="/Darkweb.html">Dark Web Explained</a>
                             <a href="/Onion-routing-tor-work.html">Onion Routing & How Tor Works</a>
                             <a href="/Marketplaces-Cryptocurrency.html">Marketplaces and Cryptocurrency</a>
+                            <a href="/Personal-Data-Leaks-on-DarkWeb.html">Personal Data on DarkWeb</a>
                         </div>
                     </li>
                     <li><a href="/About Me.html">About Me</a></li>
