--- a/contact.html
+++ b/contact.html
@@ -455,7 +455,7 @@
                     <div class="contact-card">
                         <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
                         <h3>Address</h3>
-                        <p>Mirchaiya, Siraha<br>Nepal</p>
+                        <p> Siraha, Nepal</p>
                         <a href="https://maps.google.com" target="_blank" class="contact-link">Get Directions</a>
                     </div>
 
