--- a/protect-data-online.html
+++ b/protect-data-online.html
@@ -805,7 +805,8 @@
                             <a href="/protect-data-online.html">Data Privacy</a>
                             <a href="/network-security.html">Network Security</a>
                             <a href="/Ransomware-attack.html">Incident Response</a>
-                            <a href="/deepfake-technology.html">deepfake Technology</a>
+                            <a href="/deepfake-technology.html">Deepfake Technology</a>
+                            <a href="/protect-your-wallet-from-scam.html">Remote Access Scams</a>
                         </div>
                     </li>
                     <li><a href="/About Me.html">About Me</a></li>
