--- a/deepfake-technology.html
+++ b/deepfake-technology.html
@@ -806,6 +806,7 @@
                             <a href="/network-security.html">Network Security</a>
                             <a href="/Ransomware-attack.html">Incident Response</a>
                             <a href="/deepfake-technology.html">Deepfake Technology</a>
+                            <a href="/protect-your-wallet-from-scam.html">Remote Access Scams</a>
                         </div>
                     </li>
                     <li><a href="/About Me.html">About Me</a></li>
