--- a/protect-your-wallet-from-scam.html
+++ b/protect-your-wallet-from-scam.html
@@ -862,7 +862,7 @@
                     <p>By early 2025, and transitioning into 2026, more than thousand accounts specifically concerned "Account Takeover" were reported to <strong>Nepal Police Cyber Bureau</strong>. Now, they don’t just ask you to hand over your password; they’re playing mind games in a bid for access to full control of your entire smartphone.
                     </p>
 
-                    <h3>Why Nepal has become a Prime Target:</h3>
+                    <h3>1.1. Why Nepal has become a Prime Target:</h3>
                     <ul>
                         <li><strong>Rapid Adoption vs. Digital Literacy:</strong> Millions of Nepalese have transitioned
                             to eSewa and Khalti for daily transactions, but many are unaware of the technical risks
