--- a/Advantage-Disadvantage-Science&Tech.html
+++ b/Advantage-Disadvantage-Science&Tech.html
@@ -806,6 +806,7 @@
                             <a href="/emerging-tech.html">Emerging Tech</a>
                             <a href="/Advantage-Disadvantage-Science&Tech.html">Advantages and Disadvantages of Science
                                 & Tech</a>
+                            <a href="/Quantum-Computer.html">Quantum Computer</a>    
                         </div>
                     </li>
                     <li><a href="/About Me.html">About Me</a></li>
