--- a/About Me.html
+++ b/About Me.html
@@ -283,7 +283,7 @@
 
             <div class="profile-card rounded-xl p-8 max-w-md w-full mx-auto">
                 <div class="flex flex-col items-center text-center">
-                    <img src="/bhaskar.webp" alt="Bhaskar Sah Profile Picture"
+                    <img src="/Logo1 2.png" alt="Bhaskar Sah Profile Picture"
                         class="author-avatar w-32 h-32 rounded-full object-cover border-4 shadow-md mb-6">
 
                     <h1 class="premium-heading text-3xl font-bold mb-2">Bhaskar Sah</h1>
